# circuitcore

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  PLANNED.md  README.md  RELEASE.md  vcpkg.json
board/: CMakeLists.txt
board/src/: Bounds.cpp  HitTest.cpp  PackageDefaults.cpp
emikit/: CMakeLists.txt  VALIDATION.md  main.cpp
emikit/emi/: BoardAnalysis.cpp  BoardAnalysis.h  CableCommonMode.cpp  CableCommonMode.h  LoopEmissions.cpp  LoopEmissions.h  Masks.cpp  Masks.h  Spectrum.cpp  Spectrum.h
emikit/openems/: README.md  compare_openems_emikit.py  openems_microstrip.py
emikit/tests/: CMakeLists.txt  analysis_test.cpp  cable_cm_test.cpp  calibration_test.cpp  loop_test.cpp  masks_test.cpp  spectrum_test.cpp
emikit/tools/: validate_ti.cpp
field/: CMakeLists.txt
field/src/: Field3D.cpp
formats/gmsh/: CMakeLists.txt  EXPERIMENTAL.md
formats/kicad/: CMakeLists.txt
intent/: CMakeLists.txt
intent/src/: Checks.cpp
intent/tests/: CMakeLists.txt  intent_test.cpp
mpkit/: CMakeLists.txt
mpkit/mp/: BoundaryCondition.h  ComponentCoupling.cpp  ComponentCoupling.h  Elasticity.cpp  Elasticity.h  FieldIO.cpp  FieldIO.h  Grid.h  JouleCoupling.cpp  JouleCoupling.h  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  SteadyHeat.cpp  SteadyHeat.h  Study.h  StudyRun.cpp  StudyRun.h  StudySerial.cpp  StudySerial.h  Thermoelectric.cpp  Thermoelectric.h  TransientHeat.cpp  TransientHeat.h  Voxelizer.cpp  Voxelizer.h
mpkit/tests/: CMakeLists.txt  component_coupling_test.cpp  elasticity_test.cpp  grid_test.cpp  joule_coupling_test.cpp  material_test.cpp  steady_heat_test.cpp  study_run_test.cpp  study_test.cpp  thermoelectric_test.cpp  transient_heat_test.cpp  voxelizer_test.cpp
mpkit/widgets/: CMakeLists.txt
netlist/: CMakeLists.txt
netlist/src/: Netlist.cpp
pdnkit/: ARCHITECTURE.md  AnalysisPanel.cpp  AnalysisPanel.h  CMakeLists.txt  CavityPanel.cpp  CavityPanel.h  ColorLegend.cpp  ColorLegend.h  DrcPanel.cpp  DrcPanel.h  LayerPanel.cpp  LayerPanel.h  MainWindow.cpp  MainWindow.h  NetStatsPanel.cpp  NetStatsPanel.h  PcbCanvas.cpp  PcbCanvas.h  README.md  Report.cpp  Report.h  StackupWriter.cpp  StackupWriter.h  TransientPanel.cpp  TransientPanel.h  TransientPlotWidget.cpp  TransientPlotWidget.h  ZfPlotWidget.cpp  ZfPlotWidget.h  main.cpp
pdnkit/examples/: README.md  run_static_drop.sh  run_transient.sh  run_zf_sweep.sh  sweep_all_demos.py
pdnkit/pi/: CavityModel.cpp  CavityModel.h  DecapOptimizer.cpp  DecapOptimizer.h  Dielectric.cpp  Dielectric.h  IrMesher.cpp  IrMesher.h  IrSolver.cpp  IrSolver.h  Mor.cpp  Mor.h  PowerDrc.cpp  PowerDrc.h  Roughness.cpp  Roughness.h  Sensitivity.cpp  Sensitivity.h  SpiceExport.cpp  SpiceExport.h  TargetZ.cpp  TargetZ.h  Thermal.cpp  Thermal.h  Touchstone.cpp  Touchstone.h  Transient.cpp  Transient.h  ViaInductance.cpp  ViaInductance.h  Vrm.cpp  Vrm.h
pdnkit/render/: Camera2D.cpp  Camera2D.h  CircleHelper.h  IrResultMesh.cpp  IrResultMesh.h  LayerColors.h  SegmentMesher.cpp  SegmentMesher.h  ViaMesher.cpp  ViaMesher.h  ZoneMesher.cpp  ZoneMesher.h
pdnkit/tests/: CMakeLists.txt  camera_test.cpp  cavity_ds_test.cpp  cavity_hj_test.cpp  cavity_model_test.cpp  cavity_mount_l_test.cpp  decap_optimizer_test.cpp  dielectric_test.cpp  e2e_test.cpp  hit_test.cpp  ir_mesher_test.cpp  ir_result_mesh_test.cpp  ir_solver_test.cpp  model_test.cpp  mor_test.cpp  ohms_law_test.cpp  package_defaults_test.cpp  pipeline_test.cpp  power_drc_test.cpp  report_test.cpp  roughness_test.cpp  segment_mesher_test.cpp  sensitivity_test.cpp  spice_export_test.cpp  stackup_writer_test.cpp  target_z_test.cpp  thermal_test.cpp  touchstone_test.cpp  transient_test.cpp  via_inductance_test.cpp  via_mesher_test.cpp  vrm_test.cpp  zone_mesher_test.cpp
sexpr/: CMakeLists.txt
sexpr/src/: SExpr.cpp
sexpr/tests/: CMakeLists.txt  sexpr_emit_test.cpp  sexpr_test.cpp
sikit/: CMakeLists.txt  EyeWindow.cpp  EyeWindow.h  FDTD_VALIDATION.md  LayerPanel.cpp  LayerPanel.h  MIGRATION.md  MainWindow.cpp  MainWindow.h  PcbCanvas.cpp  PcbCanvas.h  README.md  SParamPlotWindow.cpp  SParamPlotWindow.h  main.cpp
sikit/examples/: WALKTHROUGH.md  demo_board.kicad_pcb
sikit/render/: Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  CircleHelper.h  LayerColors.h  Mesher3D.cpp  Mesher3D.h  SegmentMesher.cpp  SegmentMesher.h  ViaMesher.cpp  ViaMesher.h  ZoneMesher.cpp  ZoneMesher.h
sikit/si/: Ami.cpp  Ami.h  Bathtub.cpp  Bathtub.h  BusGroup.cpp  BusGroup.h  ChannelResponse.cpp  ChannelResponse.h  ChannelSynthesis.cpp  ChannelSynthesis.h  Compliance.cpp  Compliance.h  Connector.cpp  Connector.h  CrossSection.cpp  CrossSection.h  Crosstalk.cpp  Crosstalk.h  DiffPair.cpp  DiffPair.h  DiffSynth.cpp  DiffSynth.h  DjordjevicSarkar.cpp  DjordjevicSarkar.h  Eye.cpp  Eye.h  EyeMask.cpp  EyeMask.h  EyeMetrics.cpp  EyeMetrics.h  FdmGrid.h  FdmSolver.cpp  FdmSolver.h  Fdtd3d.cpp  Fdtd3d.h  FdtdPort.cpp  FdtdPort.h  FdtdRasterize.cpp  FdtdRasterize.h  Fft.cpp  (+45 more)
sikit/tests/: CMakeLists.txt  ami_test.cpp  bathtub_test.cpp  bus_group_test.cpp  camera3d_test.cpp  camera_test.cpp  channel_dispersion_test.cpp  channel_synthesis_test.cpp  channel_test.cpp  compliance_test.cpp  connector_test.cpp  crosstalk_test.cpp  deembed_test.cpp  diff_pair_test.cpp  diff_synth_test.cpp  djordjevic_sarkar_test.cpp  em2d_test.cpp  example_test.cpp  eye_mask_test.cpp  eye_metrics_test.cpp  eye_ramp_test.cpp  eye_test.cpp  fdm_refined_test.cpp  fdtd3d_test.cpp  fdtd_port_test.cpp  fdtd_rasterize_test.cpp  fft_test.cpp  headless_test.cpp  ibis_test.cpp  impedance_test.cpp  mesher3d_test.cpp  overlay_test.cpp  project_test.cpp  reference_data_test.cpp  report_test.cpp  return_path_test.cpp  rlgc_test.cpp  roughness_test.cpp  schematic_topology_test.cpp  segment_mesher_test.cpp  (+16 more)
sikit/tools/: cavity_openems.py  (+2 more)
studio/: BoardModel.cpp  BoardModel.h  BoardTab.cpp  BoardTab.h  CMakeLists.txt  CalculatorsDialog.cpp  CalculatorsDialog.h  EmiTab.cpp  EmiTab.h  MpTab.cpp  MpTab.h  PiTab.cpp  PiTab.h  SiTab.cpp  SiTab.h  StudioWindow.cpp  StudioWindow.h  main.cpp
ui/: CMakeLists.txt
(+50 files in other folders)
